test/parser.d/valid/import.souc
module mymodule

import system
import uuid
import ./mylib

main() = do
	print "imported"
