test/parser.d/should_fail/import7.souc
module mymodule

import dir/.

main() = do
	print "imported"
